feat(auth-change-pasword): change password endpoint
